# book-keeper

./: README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: b7c1abf15d61_static_categories.py  c0998c1815b3_initial_schema.py
src/book_keeper/: __init__.py  app_dirs.py  bootstrap.py  db.py  main.py  migrations_runner.py  models.py
src/book_keeper/repositories/: account.py  category.py  transaction.py
src/book_keeper/resources/: style.qss
src/book_keeper/views/: account_view.py  category_view.py
src/book_keeper/views/dialogs/: account_dialog.py  category_dialog.py  line_edit_dialog.py
src/book_keeper/views/models/: account_table.py  category_table.py  line_table.py  transaction_table.py
src/book_keeper/views/transaction/: transaction_detail_view.py  transaction_list_view.py  transaction_view.py
src/book_keeper/views/transaction/transaction_detail/: header_form.py  transaction_detail_view.py
src/book_keeper/views/transaction/transaction_detail/lines_editor/: category_delegate.py  lines_editor.py
tests/: conftest.py
tests/test_repositories/: test_account.py  test_category.py  test_transaction.py
