[project]
name = "book-keeper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Comcenn", email = "42494284+Comcenn@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "pydantic>=2.12.5",
    "pyside6>=6.10.1",
    "sqlalchemy>=2.0.46",
]

[project.scripts]
book-keeper = "book_keeper:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[tool.setuptools.packages.find]
include = ["book_keeper*"]

[tool.setuptools.package-data]
"book_keeper.resources" = ["*.qss", "*.png", "*.svg", "*.ico"]
